tests-integration/fixtures/checking/135_derive_ord_1_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
MkWrap ::
  forall (t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)).
    (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)) ->
    Wrap @(t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type))
MkWrapNoOrd1 ::
  forall (t10 :: Type) (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type)).
    (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type)) ->
    WrapNoOrd1 @(t10 :: Type) (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type))

Types
Wrap :: forall (t4 :: Type). ((t4 :: Type) -> Type) -> (t4 :: Type) -> Type
WrapNoOrd1 :: forall (t10 :: Type). ((t10 :: Type) -> Type) -> (t10 :: Type) -> Type

Data
Wrap
  Quantified = :1
  Kind = :0

WrapNoOrd1
  Quantified = :1
  Kind = :0


Roles
Wrap = [Representational, Nominal]
WrapNoOrd1 = [Representational, Nominal]

Derived
derive (Eq1 (f :: Type -> Type), Eq (a :: Type)) => Eq (Wrap @Type (f :: Type -> Type) (a :: Type) :: Type)
derive (Ord1 (f :: Type -> Type), Ord (a :: Type)) => Ord (Wrap @Type (f :: Type -> Type) (a :: Type) :: Type)
derive (Eq1 (f :: Type -> Type), Eq (a :: Type)) => Eq (WrapNoOrd1 @Type (f :: Type -> Type) (a :: Type) :: Type)
derive Ord (a :: Type) => Ord (WrapNoOrd1 @Type (f :: Type -> Type) (a :: Type) :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Ord1 (f :: Type -> Type)
  --> 14:1..14:46
   |
14 | derive instance Ord a => Ord (WrapNoOrd1 f a)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Eq1 (f :: Type -> Type)
  --> 14:1..14:46
   |
14 | derive instance Ord a => Ord (WrapNoOrd1 f a)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
